styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: "Inconsolata", monospace;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

body {
  background: #000000;
  min-height: 100vh;
}

.text-vertical-lr {
  writing-mode: vertical-lr;
}

.text-orientation-mixed {
  text-orientation: mixed;
}

.title-bg {
  background: url("../public/title_background.png");
}

